--- a/mywebsite/index.html
+++ b/mywebsite/index.html
@@ -92,7 +92,7 @@
 
 
                 <p class = "contact_rights">
-                    2024 Yoon Jae Uk - All rights reserved
+                    2024 Yoon Jae Uk - All rights reservedddddd
                 </p>
                </div>
         </div>
