--- a/profile/index.html
+++ b/profile/index.html
@@ -28,7 +28,7 @@
     <main>
       <header class="header">
         <div class="introduce">
-          <h2>"HI My name is uk I buliding things for web"</h2>
+          <h2>"HI My name is <span>uk</span> I buliding things for web"</h2>
           <h3>I building things for web</h3>
         </div>
 
@@ -55,18 +55,28 @@
       <br />
       <br />
       <br />
-      <section>
+      <section id = "project-section">
         <div class="projects">
           <h2>Projects</h2>
 
           <div class="wrapper">
+            <!-- 프로젝트1 -->
+            <article class = "prj-item">
+            <div class = "project-thumbnail"></div>
+            <div class = "project-item">
+               <h4>Project1</h4>
+               <p class = "one-summary">1줄 요약</p>
+               <div class = "prj-tect">기술스택을 적으세요</div>
+            <div class = "project-link">
+                <i class="fa-brands fa-github"></i>
+                <div>github</div>
+            </div>
+
+            </div>   
+            </div>
             <div class="item">Project1</div>
             <div class="item">Project2</div>
             <div class="item">Project3</div>
-
-            <div class="int">Introduce1</div>
-            <div class="int">Introduce2</div>
-            <div class="int">Introduce3</div>
           </div>
 
         </div>
