--- a/portfolio-styling/portfolio.html
+++ b/portfolio-styling/portfolio.html
@@ -38,9 +38,7 @@
           <li><a class="header__menu__item" href="#contact">Contact</a></li>
         </ul>
       </nav>
-      <button class="header__toggle" aria-label="navigation menu toggle">
-        <i class="fa-solid fa-bars"></i>
-      </button>
+      
     </header>
     <!-- Main -->
     <main>
@@ -153,6 +151,10 @@
                 <li>Git</li>
                 <li>Math</li>
               </ul>
+            </section>
+            <section class = "First_Word">
+              <br>
+               <h3 class="First_title">My_First_Word</h3>
             </section>
           </div>
         </div>
