--- a/portfolio-styling/portfolio.html
+++ b/portfolio-styling/portfolio.html
@@ -146,7 +146,7 @@
               </ul>
             </section>
             <section class="skills__etc">
-              <h3 class="skills__title">Etc</h3>
+              <h3 class="skills__title">Etccccccc</h3>
               <ul>
                 <li>Git</li>
                 <li>Math</li>
