html반응형_수정

--- a/portfolio-styling/portfolio.html
+++ b/portfolio-styling/portfolio.html
@@ -11,7 +11,7 @@
       content="Portfolio for world-renowned software
     engineer UK"
     />
-    <meta name="author" content="Ellie" />
+    <meta name="author" content="UK" />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
  
     <!-- Font Awesome -->
@@ -31,6 +31,14 @@
       </div>
       <nav class="header__nav">
         <ul class="header__menu">
+          <li><a class="header__menu__item" href="#home">Home</a></li>
+          <li><a class="header__menu__item" href="#about">About</a></li>
+          <li><a class="header__menu__item" href="#skills">Skills</a></li>
+          <li><a class="header__menu__item" href="#work">My work</a></li>
+          <li><a class="header__menu__item" href="#contact">Contact</a></li>
+        </ul>
+
+        <ul class="header_menu_mobile">
           <li><a class="header__menu__item" href="#home">Home</a></li>
           <li><a class="header__menu__item" href="#about">About</a></li>
           <li><a class="header__menu__item" href="#skills">Skills</a></li>
