반응형시 줄바꿈 이슈 해결

--- a/portfolio-styling/portfolio.html
+++ b/portfolio-styling/portfolio.html
@@ -50,7 +50,7 @@
     </header>
     <!-- Main -->
     <main>
-      <!-- Home -->
+      <!-- Home --l
       <section id="home">
         <div class="max-container home__container">
           <div>
