--- a/portfolio-styling/portfolio.html
+++ b/portfolio-styling/portfolio.html
@@ -48,9 +48,8 @@
       </nav>
       
     </header>
-    <!-- Main -->
     <main>
-      <!-- Home --l
+      <!--  Home  -->
       <section id="home">
         <div class="max-container home__container">
           <div>
@@ -65,6 +64,7 @@
           </div>
         </div>
       </section>
+
       <!-- About -->
       <section id="about" class="section max-container">
         <h2 class="title">About me</h2>
@@ -154,7 +154,7 @@
               </ul>
             </section>
             <section class="skills__etc">
-              <h3 class="skills__title">Etccccccc</h3>
+              <h3 class="skills__title">Etc</h3>
               <ul>
                 <li>Git</li>
                 <li>Math</li>
